--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     </head>
     <body>
 
-
         <header>
             <h1>Tom McCrary</h1>
 
@@ -28,13 +27,13 @@
             <div id="maincontent">
                 <h2>About Me</h2>
                 <p><img id="socialphoto" src="images/tom.jpg"></p><p>My Name is Tom McCrary and I've been a Full Lamp Stack Developer for nearly 16 years.</p>
-                <p>I've focused primarily on customer relationship management (CRM), e-commerce, reporting and financial applications, but have also developed a hotel booking engine, package sales and other applications for the convention, travel and tourism industries.</p>
+                <p>I've focused primarily on customer relationship management (CRM), e-commerce, reporting and financial applications, but have also developed a hotel booking engine, vacation package sales site and meeting planning sites for the convention, travel and tourism industries.</p>
                 <p>My goal is to continue to improve my skills and grow as a developer.</p>
                 <p>I am currently learning to code in node.js, MongoDB and other technologies at the UCF Coding Bootcamp.</p>
             </div>
             
             <div id="sidebar">
-                <h2>Connect with Me</h2>
+                <h3>Connect with Me</h3>
                 <a href="https://github.com/cvbtech"><img id="socialicon" src="images/github_square_black-128.png"></a>
                 <a href="https://www.linkedin.com/in/thomas-mccrary-5a07976?trk=nav_responsive_tab_profile_pic"><img id="socialicon" src="images/linkedin_square_color-128.png"></a>
                 <a href="http://stackoverflow.com/users/6786346/cvbtech"><img id="socialicon-stackoverflow" src="images/stackoverflow.png"></a>
