updated portfolio and contact pages

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                 
             <div id="maincontent">
                 <h2>Contact</h2>
-                <form id="contactForm">
+                <form method="POST" action="#">
                     <p>Name</p>
                     <p><input name="name" placeholder="John Smith"></p>
                     <p>Email</p>
@@ -34,7 +34,7 @@
                     <p>Message</p>
                     <textarea name="message">
                     </textarea>
-                    <button name="Submit" value="Submit">
+                    <p><input id="submitButton" type="submit" name="submit" value="Submit"></p>
                 </form>
                 
             </div>
