--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <div id="maincontent">
                 <h2>About Me</h2>
                 <p><img id="socialphoto" src="images/tom.jpg"></p><p>My Name is Tom McCrary and I've been a Full Lamp Stack Developer for nearly 16 years.</p>
-                <p>I've focused primarily on customer relationship management (CRM), e-commerce, reporting and financial applications, but have also developed a hotel booking engine, vacation package sales site and meeting planning sites for the convention, travel and tourism industries.</p>
+                <p>I've focused primarily on customer relationship management (CRM), e-commerce, reporting and financial applications, but have also developed a hotel booking engine, vacation package sales site and meeting planning sites for the convention, travel and tourism industry.</p>
                 <p>My goal is to continue to improve my skills and grow as a developer.</p>
                 <p>I am currently learning to code in node.js, MongoDB and other technologies at the UCF Coding Bootcamp.</p>
+
             </div>
             
             <div id="sidebar">
