--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Basic Portfolio</title>
-        <meta name="description" content="An interactive getting started guide for Brackets.">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="assets/css/reset.css">
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
 <body>
 
@@ -41,9 +41,9 @@
             
             <div id="sidebar">
                 <h3>Connect with Me</h3>
-                <a href="https://github.com/cvbtech"><img id="socialicon" src="images/github_square_black-128.png"></a>
-                <a href="https://www.linkedin.com/in/thomas-mccrary-5a07976?trk=nav_responsive_tab_profile_pic"><img id="socialicon" src="images/linkedin_square_color-128.png"></a>
-                <a href="http://stackoverflow.com/users/6786346/cvbtech"><img id="socialicon-stackoverflow" src="images/stackoverflow.png"></a>
+                <a href="https://github.com/cvbtech"><img id="socialicon" src="assets/images/github_square_black-128.png"></a>
+                <a href="https://www.linkedin.com/in/thomas-mccrary-5a07976?trk=nav_responsive_tab_profile_pic"><img id="socialicon" src="assets/images/linkedin_square_color-128.png"></a>
+                <a href="http://stackoverflow.com/users/6786346/cvbtech"><img id="socialicon-stackoverflow" src="assets/images/stackoverflow.png"></a>
             </div>
                         
             <p>&nbsp;</p>
