--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Basic Portfolio</title>
-        <meta name="description" content="An interactive getting started guide for Brackets.">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="assets/css/reset.css">        <link rel="stylesheet" href="assets/css/style.css">
     </head>
 <body>
 
@@ -27,32 +26,32 @@
             <div id="maincontent">
                 <h2>Portfolio</h2>
                 <div class="portfolioImage">
-                    <img id="portfolioImageStyle" src="images/Hangman.jpg">
+                    <img id="portfolioImageStyle" src="assets/images/Hangman.jpg">
                     <span class="portfolioImageText">Hangman</span>
                 </div>
                 <div class="portfolioImage">
-                    <img id="portfolioImageStyle" src="images/RPGGame.jpg">
+                    <img id="portfolioImageStyle" src="assets/images/RPGGame.jpg">
                     <span class="portfolioImageText">RPG Game</span>
                 </div>
                 <div class="portfolioImage">
-                    <img id="portfolioImageStyle" src="images/TriviaGame.jpg">
+                    <img id="portfolioImageStyle" src="assets/images/TriviaGame.jpg">
                     <span class="portfolioImageText">Trivia Game</span>
                 </div>
                 <div class="portfolioImage">
-                    <img id="portfolioImageStyle" src="images/RutgersInfoWidget.jpg">
+                    <img id="portfolioImageStyle" src="assets/images/RutgersInfoWidget.jpg">
                     <span class="portfolioImageText">Rutgers Info Widget</span>
                 </div>
                 <div class="portfolioImage">
-                    <img id="portfolioImageStyle" src="images/RockPaperScissors.jpg">
+                    <img id="portfolioImageStyle" src="assets/images/RockPaperScissors.jpg">
                     <span class="portfolioImageText">Rock Paper Scissors</span>
                 </div>
             </div>
             
             <div id="sidebar">
                 <h3>Connect with Me</h3>
-                <a href="https://github.com/cvbtech"><img id="socialicon" src="images/github_square_black-128.png"></a>
-                <a href="https://www.linkedin.com/in/thomas-mccrary-5a07976?trk=nav_responsive_tab_profile_pic"><img id="socialicon" src="images/linkedin_square_color-128.png"></a>
-                <a href="http://stackoverflow.com/users/6786346/cvbtech"><img id="socialicon-stackoverflow" src="images/stackoverflow.png"></a>
+                <a href="https://github.com/cvbtech"><img id="socialicon" src="assets/images/github_square_black-128.png"></a>
+                <a href="https://www.linkedin.com/in/thomas-mccrary-5a07976?trk=nav_responsive_tab_profile_pic"><img id="socialicon" src="assets/images/linkedin_square_color-128.png"></a>
+                <a href="http://stackoverflow.com/users/6786346/cvbtech"><img id="socialicon-stackoverflow" src="assets/images/stackoverflow.png"></a>
             </div>
                         
             <p>&nbsp;</p>
